--- a/AngularWeb.csproj
+++ b/AngularWeb.csproj
@@ -17,6 +17,11 @@
     <NoWarn>$(NoWarn);1591</NoWarn>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DebugType>embedded</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Audit.EntityFramework.Core" Version="15.0.4" />
     <PackageReference Include="AutoMapper" Version="9.0.0" />
