--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,6 @@
     "Secret": "3173B10A-D779-478A-B8DB-5B6B70D92E8C"
   },
   "ConnectionStrings": {
-    "DataContext": "Server=CLI-DRE-SCSE\\SERVER2017;Database=newERP;Trusted_Connection=True;"
+    "DataContext": "Server=localhost;Database=testDB;Trusted_Connection=True;"
   }
 }
